--- a/css/style.css
+++ b/css/style.css
@@ -29,21 +29,30 @@ body {
 .about {
   position: fixed;
   height: 100vh;
-  width: 30%;
-  text-align: right;
-  /* background-image: url("../img/yarn.jpg"); */
+  width: 29.5%; 
+  text-align: left;
+  background-color: #1f1815;
+  background-image: url("../img/7-5.jpg");
   background-attachment: fixed;
-  background-size: cover;
-  color: #a2a2a2;
+  background-size: contain;
+  background-repeat: no-repeat;
+  -webkit-filter: opacity(40%); /* Opera, Chrome, Safari */
+    filter: opacity(40%);
+  
 }
 
+
 .me {
-  margin: 40px;
+  margin: 10px;
   padding: 25px;
-  border-radius: 10px;
-  background-color: rgba(255, 255, 255, 0.774);
+  color: white;
   font-size: 30px;
   font-weight: bolder;
+  
+}
+.email{
+  font-size: 20px;
+  
 }
 
 .container {
